--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,9 +15,47 @@
   padding: 0;
 }
 
+img {
+  border-radius: 5% !important;
+}
+
 a {
   text-decoration: none;
-  cursor: pointer;
+}
+
+a:not(header a) {
+  font-size: 1.3rem;
+  text-decoration: none;
+  margin-top: 1em;
+  display: inline-block;
+  font-weight: bold;
+  padding: 0.5em;
+  margin-left: -0.5em;
+  position: relative;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+}
+a:not(header a):before, a:not(header a):after {
+  position: absolute;
+  content: "";
+  border-bottom: 3px solid rgb(0, 99, 228);
+  border-radius: 1em;
+  bottom: 0.3em;
+  transition: transform 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+a:not(header a):before {
+  width: 1em;
+  transform-origin: left;
+}
+a:not(header a):after {
+  width: 82%;
+  left: 1em;
+  transform: translateX(110%);
+}
+a:not(header a):hover:before {
+  transform: scaleX(0.3);
+}
+a:not(header a):hover:after {
+  transform: translateX(0);
 }
 
 ul {
@@ -25,13 +63,17 @@ ul {
 }
 
 body {
-  background-color: #5310e3;
+  background-color: #3282b8;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+header {
+  background-color: #1b262c;
+  position: sticky;
+}
 header nav {
+  position: sticky;
   padding: 1rem;
-  position: relative;
   height: 10vh;
   width: 100vw;
   display: flex;
@@ -45,7 +87,7 @@ header nav {
   display: flex;
 }
 .logo a img {
-  object-fit: contain;
+  object-fit: cover;
   width: 100%;
   height: 100%;
 }
@@ -83,16 +125,39 @@ nav ul {
 }
 .home .home-img img {
   position: relative;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 main section {
   width: 100vw;
   height: 100vh;
 }
+main section:nth-of-type(1) {
+  background-color: #0f4c75;
+  color: #fff;
+}
+main section:nth-of-type(1):nth-of-type(n + 4) {
+  background-color: #0f4c75;
+  color: #fff;
+}
+main section:nth-of-type(2) {
+  background-color: #2d0f6e;
+  color: #fff;
+}
+main section:nth-of-type(2):nth-of-type(n + 4) {
+  background-color: #2d0f6e;
+  color: #fff;
+}
+main section:nth-of-type(3) {
+  background-color: #bbe1fa;
+  color: #000;
+}
+main section:nth-of-type(3):nth-of-type(n + 4) {
+  background-color: #bbe1fa;
+  color: #000;
+}
 
 .topics {
-  background-color: #2d0f6e;
   display: flex;
   position: relative;
   flex-direction: column;
@@ -183,4 +248,44 @@ main section {
   font-size: 0.7rem;
   color: #666;
   border-top: 1px solid #eee;
+}
+
+.flex-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: space-between;
+}
+.flex-container .text-wrapper {
+  padding: 2.5rem;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 4rem;
+}
+.flex-container .text-wrapper h2 {
+  font-weight: 500;
+  font-size: 3.7rem;
+}
+.flex-container img {
+  width: 52vw;
+  padding-right: 2.5vw;
+  object-fit: contain;
+}
+
+.auto-show {
+  animation: autoshow both;
+  animation-timeline: view(70% 5%);
+}
+
+@keyframes autoshow {
+  from {
+    opacity: 0;
+    transform: translateY(13vh) scale(0.3);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0) scale(1);
+  }
 }/*# sourceMappingURL=styles.css.map */
