--- a/src/scss/web_history.scss
+++ b/src/scss/web_history.scss
@@ -15,18 +15,38 @@ p {
   text-align: justify;
   padding: 2rem;
 }
+ol {
+  padding: 0 4rem;
+}
+span {
+  text-decoration: underline;
+  font-size: 1.3rem;
+  font-weight: 500;
+}
 
-a {
+a:not(aside a) {
+  box-shadow: inset 0 0 0 0 #54b3d6;
+  color: #54b3d6;
+  padding: 0 0.25rem;
+  margin: 0 -0.25rem;
+  transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  &:hover {
+    color: #fff;
+    box-shadow: inset 200px 0 0 0 #54b3d6;
+  }
+}
+
+/* Presentational styles */
+aside a {
+  color: #54b3d6;
   text-decoration: none;
-  font-size: 300;
-  color: cadetblue;
-  cursor: pointer;
 }
 
 ul {
   list-style: none;
   padding: 0 3rem;
 }
+
 body {
   display: flex;
   background-color: $background-color;
@@ -62,11 +82,13 @@ figcaption {
 aside {
   position: fixed;
   height: 100vh;
+  margin-top: 8vh;
   width: 17vw;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 2rem;
   font-size: 0.4rem;
   padding: 1rem;
   i {
@@ -78,10 +100,20 @@ aside {
 }
 header {
   margin-bottom: 15vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   h1 {
     text-align: center;
     font-weight: 700;
     font-size: 4rem;
+  }
+  img {
+    object-fit: contain;
+    border-radius: 5%;
+    margin-top: 3rem;
+    height: 50vh;
   }
 }
 main {
@@ -89,6 +121,7 @@ main {
   flex-direction: column;
   justify-content: center;
   gap: 10vh;
+  margin-bottom: 3rem;
 
   section {
     h2 {
@@ -100,6 +133,13 @@ main {
       h3 {
         font-weight: 400;
         font-size: 1.8rem;
+        &::after {
+          content: "";
+          display: block;
+          width: 100%;
+          margin-top: 10px;
+          border-bottom: 3px solid $text-color;
+        }
       }
       p {
         margin: 2.5vh 0;
