--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,6 +4,10 @@
   justify-content: space-around;
   align-items: center;
 
+  font-size: 2vh;
+  font-family: Inter, Arial, sans-serif;
+
+  color: #f0f0f0;
   top: 0;
   background-color: #1b262c;
   z-index: 10000000;
@@ -74,4 +78,51 @@
     top: 10px;
     font-size: 20px;
   }
+}
+.dropdown {
+  position: relative;
+}
+.dropdown-content {
+  position: absolute;
+  top: 150%;
+  right: 0;
+  background: #1b262c;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  flex-direction: column;
+  gap: 0.7rem;
+  align-items: center;
+  justify-content: center;
+  transform: translateX(50%) translateY(-20px);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s;
+  display: flex; /* Keep it always flex */
+}
+
+.dropdown:hover .dropdown-content {
+  opacity: 1;
+  visibility: visible;
+  transform: translateX(50%) translateY(0);
+}
+.dropdown-content a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content a:hover {
+  transform: scale(1.05);
+}
+.header a {
+  text-decoration: none;
+  color: #f0f0f0 !important;
+}
+.header a:hover {
+  transform: scale(1.05);
+}
+.header ul {
+  list-style: none;
+  text-decoration: none;
 }
