--- a/src/css/schedule.css
+++ b/src/css/schedule.css
@@ -269,3 +269,37 @@ body {
 .dark-theme #add-event-form button[type="button"]:hover {
   background-color: #484e53;
 }
+
+.alert {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  padding: 15px;
+  border-radius: 5px;
+  z-index: 1000;
+  animation: fadeOut 5s forwards;
+}
+
+.success {
+  background-color: #4caf50;
+  color: white;
+}
+
+.error {
+  background-color: #f44336;
+  color: white;
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+
+  70% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
