--- a/src/css/web_history.css
+++ b/src/css/web_history.css
@@ -1,7 +1,7 @@
 * {
   font-family: Inter, Arial, sans-serif;
   font-weight: 400;
-  color: black;
+  /* color: black; */
   font-size: 2vh;
   line-height: 1.6;
   box-sizing: border-box;
@@ -24,14 +24,14 @@ span {
   font-weight: 500;
 }
 
-a:not(aside a) {
+.body a:not(aside a) {
   box-shadow: inset 0 0 0 0 #54b3d6;
   color: #54b3d6;
   padding: 0 0.25rem;
   margin: 0 -0.25rem;
   transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
-a:not(aside a):hover {
+.body a:not(aside a):hover {
   color: #fff;
   box-shadow: inset 200px 0 0 0 #54b3d6;
 }
@@ -42,14 +42,13 @@ aside a {
   text-decoration: none;
 }
 
-section > ul,
-nav > ul {
+.body section > ul,
+.table_of_content nav > ul {
   list-style: none;
   padding: 0 3rem;
 }
 
 body {
-  display: flex;
   background-color: #f0f0f0;
 }
 
@@ -78,7 +77,7 @@ figcaption {
   background-color: white;
   margin: 0 17vw;
   padding: 0 2vw;
-  margin-top: 8vh;
+  margin-top: 2vh;
   border-radius: 2vh;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -102,19 +101,19 @@ aside i {
   margin: 2vw;
 }
 
-header {
+.title {
   margin-bottom: 15vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-header h1 {
+.title h1 {
   text-align: center;
   font-weight: 700;
   font-size: 4rem;
 }
-header img {
+.title img {
   object-fit: contain;
   border-radius: 5%;
   margin-top: 3rem;
