--- a/css/header.css
+++ b/css/header.css
@@ -20,7 +20,7 @@
   height: 10vh;
   width: 100%;
   display: flex;
-  justify-content: start;
+  justify-content: space-around;
   align-items: center;
   gap: 1rem;
 }
