--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,7 @@
-.header {
+#header *{
+  box-sizing: border-box;
+}
+#header {
   position: sticky;
   display: flex;
   justify-content: space-around;
@@ -14,7 +17,7 @@
   width: 100%;
   box-sizing: border-box;
 }
-.header nav {
+#header nav {
   position: sticky;
   padding: 1rem;
   height: 10vh;
@@ -24,45 +27,25 @@
   align-items: center;
   gap: 1rem;
 }
-.header nav ul li:hover {
+#header nav ul li:hover {
   transform: scale(1.05);
 }
 
-.header .logo {
+#header .logo {
   height: 100%;
   display: flex;
 }
-.header .logo a img {
+#header .logo a img {
   object-fit: cover;
   width: 100%;
   height: 100%;
 }
 
-.header nav ul {
+#header nav ul {
   display: flex;
   justify-content: space-between;
   gap: 2rem;
 }
-#theme-toggle {
-  position: fixed; /* Change to fixed position */
-  right: 20px; /* Distance from right edge */
-  top: 20px; /* Distance from top edge */
-  background: none;
-  border: none;
-  cursor: pointer;
-  font-size: 40px; /* Adjusted size */
-  color: var(--text-color);
-  z-index: 10000001; /* Slightly higher than header */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: transform 0.2s ease;
-}
-
-#theme-toggle:hover {
-  transform: scale(1.1);
-}
-
 .bx-sun {
   color: rgb(175, 151, 13);
 }
@@ -115,14 +98,27 @@
 .dropdown-content a:hover {
   transform: scale(1.05);
 }
-.header a {
+#header a {
   text-decoration: none;
   color: #f0f0f0 !important;
 }
-.header a:hover {
+#header a:hover {
   transform: scale(1.05);
 }
-.header ul {
+#header ul {
   list-style: none;
   text-decoration: none;
 }
+
+.group-project-link {
+  color: #e6e6e6;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #ff9999;
+  transition: background-color 0.3s ease;
+  }
+  .group-project-link:hover {
+  background-color: #444;
+  }
