--- a/css/popup.css
+++ b/css/popup.css
@@ -8,7 +8,12 @@
   display: none;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 100000000000000000000000000;
+  pointer-events: none; /* New line */
+}
+
+.disclaimer-popup.active {
+  pointer-events: auto; /* Enables pointer events when popup is active */
 }
 
 .disclaimer-content {
